add updating of zone
